--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Hello</h2>
-    <h1>Wadddup</h1>
+    <h1 style="color:blue;">Wadddup</h1>
     Hello, World!
 </body>
 </html>
